<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/back_button"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginTop="120dp"
            android:contentDescription="@string/profile_pic"
            android:src="@drawable/icon_account_circle"

            />

        <EditText
            android:id="@+id/username_input"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="Autofill" />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="375dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/white"
            android:padding="1dp"
            android:text="@string/login"
            android:textColor="#673AB7"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="onClickLogin"/>

        <Button
            android:id="@+id/register_tutor_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/white"
            android:padding="1dp"
            android:text="@string/register_as_tutor"
            android:textColor="#673AB7"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="onClickRegistration"/>

        <Button
            android:id="@+id/register_student_btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/white"
            android:padding="1dp"
            android:text="@string/register_as_student"
            android:textColor="#673AB7"
            android:textSize="20sp"
            android:textStyle="bold"
            android:onClick="onClickRegistration"/>

    </LinearLayout>
</RelativeLayout>

